assets/css/screen.css
/* ... */
.page-template .article-title {
    margin-bottom: 0;
}


/* 7.3. Subscribe
/* ---------------------------------------------------------- */

.footer-cta {
    position: relative;
    padding: 9vmin 4vmin 10vmin;
    color: #fff;
    text-align: center;
    background: var(--color-darkgrey);
}

.footer-cta h2 {
    margin: 0 0 30px;
    transform: scale(1.15);
}

.footer-cta-button {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 500px;
    padding: 5px 5px 5px 15px;
    font-size: 1.8rem;
    color: var(--color-midgrey);
    background: #fff;
    border-radius: 8px;
}

.footer-cta-button span {
    display: inline-block;
    padding: 10px 20px;
    color: #fff;
    font-weight: 500;
    background: var(--ghost-accent-color);
    border-radius: 5px;
}


/* 7.4. Read more
/* ---------------------------------------------------------- */

.read-more-wrap {
    width: 100%;
    padding: 4vmin;
    margin: 0 auto -40px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    background: color-mod(var(--color-darkgrey) l(-5%));
}

.read-more {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 4vmin;
}

.read-more .post-card-title {
    color: #fff;
    opacity: 0.8;
}

.read-more .post-card-excerpt {
    color: rgba(255, 255, 255, 0.6);
}

.read-more .post-card-byline-content a {
    color: #fff;
}


@media (max-width: 1000px) {
    .read-more {
        grid-template-columns: 1fr 1fr;
    }
    .read-more article:nth-child(3) {
        display: none;
    }
}

@media (max-width: 700px) {
    .read-more {
        grid-template-columns: 1fr;
    }
    .read-more article:nth-child(2) {
        display: none;
    }
}


/* 8. Author Template
/* ---------------------------------------------------------- */

.author-template .posts {
    position: relative;
    height: 100%;
    display: grid;
    grid-template-columns: 200px 1fr 1fr;
    grid-gap: 4vmin;
}

.author-template .posts .post-feed {
    grid-column: 2 / 4;
    grid-template-columns: 1fr 1fr;
}

.author-profile {
    padding: 4vmin 0;
}

.author-profile-content {
    height: auto;
    position: sticky;
    top: 4vmin;
    font-size: 1.4rem;
    line-height:  1.4em;
}

.author-profile-pic {
    display: block;
    width: 150px;
    height: 150px;
    object-fit: cover;
    margin: 0 0 2rem;
}

.author-profile h1 {
    margin: 0 0 0.3em;
    font-size: 2rem;
}

.author-profile p {
    margin: 0 0 1.5em;
    color: color-mod(var(--color-midgrey) l(-8%));
}

.author-profile-location {
    margin: 0 0 1.5em;
    font-weight: 700;
}

.author-profile-social-link {
    display: block;
    padding: 0 0 5px;
    font-size: 1.3rem;
    color: color-mod(var(--color-midgrey) l(-8%));
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 100%;
    white-space: nowrap;
}

.author-profile-social-link:hover {
    color: var(--color-darkgrey);
}

@media (max-width: 900px) {
    .author-template .posts .post-feed {
        grid-template-columns: 1fr;
    }
}

@media (max-width: 650px) {
    .author-template .posts {
        grid-template-columns: 1fr;
        grid-gap: 0;
    }
    .author-template .posts .post-feed {
        grid-column: 1 / auto;
    }
    .author-profile {
        padding-right: 0;
    }
    .author-profile-content {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }
}


/* 8. Tag Template
/* ---------------------------------------------------------- */

.tag-template .post-card-large .post-card-image-link {
    grid-column: 2 / span 2;
    order: 2;
}

.tag-template .post-card-large .post-card-content {
    order: 1;
}


/* 9. Error Template
/* ---------------------------------------------------------- */

.error-content {
    padding: 14vw 4vw 6vw;
}

.error-message {
    padding-bottom: 10vw;
    text-align: center;
}

.error-code {
    margin: 0;
    color: var(--ghost-accent-color);
    font-size: 12vw;
    line-height: 1em;
    letter-spacing: -5px;
}

.error-description {
    margin: 0;
    color: var(--color-midgrey);
    font-size: 3.2rem;
    line-height: 1.3em;
    font-weight: 400;
}

.error-link {
    display: inline-block;
    margin-top: 5px;
}

@media (min-width: 940px) {
    .error-content .post-card {
        margin-bottom: 0;
        padding-bottom: 0;
        border-bottom: none;
    }
}

@media (max-width: 800px) {
    .error-content {
        padding-top: 24vw;
    }
    .error-code {
        font-size: 11.2rem;
    }
    .error-message {
        padding-bottom: 16vw;
    }
    .error-description {
        margin: 5px 0 0 0;
        font-size: 1.8rem;
    }
}

@media (max-width: 500px) {
    .error-content {
        padding-top: 28vw;
    }
    .error-message {
        padding-bottom: 14vw;
    }
}


/* 11. Site Footer
/* ---------------------------------------------------------- */

.site-footer {
    position: relative;
    margin: 40px 0 0 0;
    padding: 40px 4vmin 140px;
    color: #fff;
    background: color-mod(var(--color-darkgrey) l(-5%));
}

.site-footer .inner {
    display: grid;
    grid-gap: 40px;
    grid-template-columns: auto 1fr auto;
    color: rgba(255,255,255,0.7);
    font-size: 1.3rem;
}

.site-footer .copyright a {
    color: #fff;
    letter-spacing: -0.015em;
    font-weight: 500;
}

.site-footer a {
    color: rgba(255,255,255,0.7);
}

.site-footer a:hover {
    color: rgba(255,255,255,1);
    text-decoration: none;
}

.site-footer-nav ul {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: 0 0 20px;
    padding: 0;
    list-style: none;
}

.site-footer-nav li {
    display: inline-flex;
    align-items: center;
    padding: 0;
    margin: 0;
    line-height: 2em;
}

.site-footer-nav a {
    position: relative;
    display: inline-flex;
    align-items: center;
    margin-left: 10px;
}
/* ... */

